@@ -1,3 +1,8 @@
+2008-01-11  Sebastien Pouliot  <sebastien@ximian.com> 
+
+	* ExceptionBlockParser.cs: Since we now compile with >= 2.0 changed
+	this class to static.
+
 2007-11-30  Nestor Salceda  <nestor.salceda@gmail.com>
 
 	* ExecutionPath.cs: Removed some unused code.
